--- a/Ajerly Platform/Views/Shared/_Layout.cshtml
+++ b/Ajerly Platform/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
 @RenderBody()
 
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+@RenderSection("Scripts", required: false)
 </body>
 
 </html>
